--- a/playbooks/ap.yaml
+++ b/playbooks/ap.yaml
@@ -8,7 +8,7 @@
 
     - name: include variables for devices
       include_vars:
-        file: vars/ap.yaml
+        file: ../vars/ap.yaml
         name: ap
 
     - name: ENSURE APPS EXIST
