--- a/playbooks/vrf.yaml
+++ b/playbooks/vrf.yaml
@@ -8,7 +8,7 @@
 
      - name: include variables for devices
        include_vars:
-        file: vars/vrf.yaml
+        file: ../vars/vrf.yaml
         name: vrf
 
      - name: ENSURE TENANT VRF EXISTS
