--- a/playbooks/remove_vrf.yaml
+++ b/playbooks/remove_vrf.yaml
@@ -16,7 +16,7 @@
          host: "{{ inventory_hostname }}"
          username: "{{ username }}"
          password: "{{ password }}"
-         state: "present"
+         state: "absent"
          validate_certs: False
          tenant: "{{ item.value.tenant }}"
          vrf: "{{ item.value.vrf_name }}"
